syntax = "proto3";
package linuxCommand;
import "proto/Empty.proto";
import "proto/Response.proto";
option go_package = ".;linuxCommand";

message Figlet {
 bool R = 1;
 bool X = 2;
 bool L = 3;
 bool RR = 4;
 bool XX = 5;
 bool LL = 6;
 bool C = 7;
 bool P = 8;
 bool N = 9;
 bool O = 10;
 bool W = 11;
 bool K = 12;
 bool S = 13;
 bool SS = 14;
 bool NN = 15;
 bool E = 16;
 bool D = 17;
 bool T = 18;
 bool NNN = 19;
 string WW = 20;
 string M = 21;
 string F = 22;
 string CC = 23;
 string Message = 24;
}

service FigletService {
  rpc GetFiglet(Figlet) returns (Responses) {}
  rpc GetFigletFile(Empty) returns (Responses) {}
}
