syntax = "proto3";
package linuxCommand;
import "proto/Empty.proto";
import "proto/Response.proto";
option go_package = ".;linuxCommand";

message Toilet {
 bool S = 1;
 bool SS = 2;
 bool K = 3;
 bool W = 4;
 bool O = 5;
 string F = 6;
 string FF = 7;
 string FFF = 8;
 string E = 9;
 string F3 = 10;
 string F4 = 11;
 string F5 = 12;
 string F6 = 13;
 string F7 = 14;
 string F8 = 15;
 string F9 = 16; 
 string Message = 117;
}

service ToiletService {
  rpc GetToilet(Toilet) returns (Responses) {}
  rpc GetToiletFFile(Empty) returns (Responses) {}
  rpc GetToiletEFile(Empty) returns (Responses) {}
  rpc GetToiletFFFile(Empty) returns (Responses) {}
}
